# split-bill-hs

./: LICENSE  TODO  split-bill.cabal  split-bill.lhs
src/: Main.hs  Main.lhs  SplitBill.hs
test/: TestHelpers.hs  TestMain.hs
