name:                split-bill
version:             0.1.0.0
synopsis:            A program to split my groccery bills between me and my roommate
-- description:         Please see README.md
-- homepage:            http://github.com/githubuser/split-bill#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Batischev
maintainer:          eual.jp@gmail.com
copyright:           2015 Alexander Batischev
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable split-bill
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , Decimal
