name:                split-bill
version:             0.1.0.0
synopsis:            A program to split my groccery bills between me and my roommate
-- description:         Please see README.md
-- homepage:            http://github.com/githubuser/split-bill#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Batischev
maintainer:          eual.jp@gmail.com
copyright:           2015 Alexander Batischev
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SplitBill
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , Decimal

executable split-bill
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , Decimal

test-suite split-bill-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestMain.hs
  other-modules:       TestHelpers
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , tasty
                       , tasty-hunit
                       , split-bill
                       , Decimal
